# adwiseai

./: .README  .gitignore  .md  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_ingestion.ipynb  02_data_cleaning_and_features.ipynb  03_channel_insights_by_company.ipynb
prompts/: prompt1.json
