[project]
name = "adwiseai"
version = "0.1.0"
description = "An end-to-end LLMOps system for automated ad campaign analysis and optimization"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pandas",
    "sqlalchemy",
    "azure-storage-blob",
    "mlflow",
    "jinja2",
    "python-dotenv"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
